Kubernetes-proj/04.Kube-Example-Ingress/service-ClusterIp-web-app-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: web-app-dev
  labels:
    app: web-app
    environment: dev
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80          # porta esposta dal Service
      targetPort: 8080  # porta del container
  type: ClusterIP       # ClusterIp per accesso dal PC a minikube
