Kubernetes-proj/04.Kube-Example-Ingress/ingress-web-app-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: web-app-dev
  labels:
    app: web-app 
    environment: dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Cattura /web-app/ e qualunque cosa segua
          - path: /web-app(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
